# happyrav

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.gusty.snippet  Dockerfile  GEMINI.md  IMPLEMENTATION_SMOKE_TESTS_SWISS.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  agents.md  api-to-auth-migration.md  docker-compose.yml  main.py  models.py  nginx.happyrav.conf  pyproject.toml  requirements.txt
doc_templates/: coverletter-template-friendly.html.j2  coverletter-template-simple.html.j2  coverletter-template-sophisticated.html.j2  coverletter-template.html.j2  cv-builder-business.html.j2  cv-builder-cutset.html.j2  cv-builder-freundlich.html.j2  cv-builder-green.html.j2  cv-template-1column.html  cv-template-ats-clean.html.j2  cv-template-ats-modern.html.j2  cv-template-friendly.html.j2  cv-template-simple.html.j2  cv-template-sophisticated.html.j2  monster_timeline.html.j2
services/: __init__.py  cache.py  cv_quality.py  emailer.py  extract_documents.py  llm_kimi.py  llm_matching.py  parsing.py  pdf_render.py  question_engine.py  scoring.py  templating.py
static/: app.js  style.css
templates/: _layout_wizard.html  _page_builder.html  _page_cover.html  _page_questions.html  _page_result.html  _page_result_full.html  _page_review.html  _page_start.html  _page_upload.html  _page_upload_block.html  _result.html  index.html
tests/: conftest.py  test_api_key_errors.py  test_app_js_result_bindings.py  test_builder_render.py  test_builder_templates.py  test_cv_quality.py  test_i18n_plain_language.py  test_integration.py  test_keyword_matching_fix.py  (+9 more)
